fix(spring): remove preview api from domain event scope